# WebCamTest

./: CMakeLists.txt
Camera/: CMakeLists.txt
Camera/include/wx/camera/: camera.h
Camera/include/wx/camera/msw/: camera.h
Camera/src/: camera.cpp
Camera/src/msw/: camera.cpp
WebCamTest/: CMakeLists.txt
WebCamTest/src/: CanvasPanel.cpp  CanvasPanel.h  MyFrameBase.cpp  MyFrameBase.h  WebCamTest.cpp  WebCamTest.h  forms.wxui  wxui_code.cmake
